--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
+      "@types/jsonwebtoken": "^8.5.0",
       "@types/node": "^8.0.29",
       "ts-node": "3.3.0",
       "ts-node-dev": "^1.0.0-pre.52",
@@ -16,6 +17,7 @@
       "bcryptjs": "^2.4.3",
       "express": "^4.17.1",
       "graphql": "^15.3.0",
+      "jsonwebtoken": "^8.5.1",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
       "type-graphql": "^1.0.0-rc.3",
