--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
+      "@types/cookie-parser": "^1.4.2",
       "@types/jsonwebtoken": "^8.5.0",
       "@types/node": "^8.0.29",
       "ts-node": "3.3.0",
@@ -15,6 +16,7 @@
       "@types/graphql": "^14.5.0",
       "apollo-server-express": "^2.15.1",
       "bcryptjs": "^2.4.3",
+      "cookie-parser": "^1.4.5",
       "express": "^4.17.1",
       "graphql": "^15.3.0",
       "jsonwebtoken": "^8.5.1",
